--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "normalize.css": "^7.0.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
