--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --env.production",
     "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server\"",
     "stats": "webpack --env.production --profile --json > stats.json",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint --ext .jsx,.js src/"
   },
   "keywords": [],
   "author": "William Abboud",
@@ -26,6 +27,11 @@
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.8",
     "cssnano": "^3.10.0",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
