--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,9 +1,8 @@
 # Supported browsers
 
-last 2 chrome versions
-last 2 firefox versions
-last 2 edge versions
-last 2 opera versions
+last 2 Chrome versions
 last 2 ChromeAndroid versions
-safari >= 9.3
-ie 11
+last 2 Edge versions
+last 2 Firefox versions
+last 2 Safari versions
+last 2 iOS versions
