--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "webpack-config",
   "version": "1.0.0",
   "description": "Webpack configuration and sample modern front end scaffolding",
-  "main": "src/app.js",
+  "main": "src/index.js",
   "scripts": {
-    "build": "webpack --env.production",
-    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server\"",
+    "build": "webpack --config ./webpack.prod.js",
+    "start": "webpack-dev-server --config ./webpack.dev.js",
     "stats": "webpack --env.production --profile --json > stats.json",
     "test": "jest",
     "lint": "eslint --ext .jsx,.js src/"
   },
+  "sideEffects": [
+    "*.css",
+    "*.scss"
+  ],
   "keywords": [],
   "author": "William Abboud",
   "license": "ISC",
@@ -27,18 +31,21 @@
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "fast-sass-loader": "^1.4.5",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.1",
     "jest": "^23.1.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.5",
     "postcss-loader": "^2.1.5",
@@ -48,17 +55,21 @@
     "webpack": "^4.12.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.3",
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "normalize.css": "^7.0.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-hot-loader": "^4.3.3"
+    "react-hot-loader": "^4.3.3",
+    "webpack-cli": "^3.0.8"
   },
   "jest": {
+    "automock": false,
     "moduleFileExtensions": [
       "js",
       "jsx"
